# ESP32-SMB-API

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
doc/web/: app.js  dashboard.html  index.html  smb.html  style.css  upload_script.html
main/: CMakeLists.txt  main.c
main/APIs/HTTP_SERVER/: http_server.c  http_server.h
main/APIs/SMB/: app_smb.c  app_smb.h
main/APIs/SPIFFS/: app_spiffs.c  app_spiffs.h
main/APIs/WIFI_API/: wifi_app.c  wifi_app.h
